--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.cyberbuggy.interactions",
     "version": "0.0.1",
-    "displayName": "Loading Screen",
+    "displayName": "Interactions",
     "author": {
         "name": "CyberBuggy"
     },
